# Quran-for-Kids

./: ADMIN_GUIDE.md  App.tsx  CHANGELOG.md  CHECK_DEPLOYMENT.md  COMPLETION_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_INSTRUCTIONS.md  FEATURES.md  GEMINI_SETUP.md  HOW_TO_ACTIVATE_GEMINI.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  START_HERE.md  STATUS_REPORT.md  SUMMARY.md  admin.html  content.md  deploy-gh-pages.ps1  deploy-gh-pages.sh  design.md  index.css  index.html  interaction.md  metadata.json  package-lock.json  package.json  services.html  temp.html  track.html  types.ts  vite.config.ts
.zencoder/rules/: repo.md
archive/removed-auth/: AdminDashboard.tsx.bak  AdminLogin.tsx.bak  UserAuthModal.tsx.bak  UserLogin.tsx.bak  UserRegister.tsx.bak
backend/: pyproject.toml  requirements.txt
backend/config/: settings.py
components/: AdminDashboard.tsx  AdminLogin.tsx  Alphabet.tsx  ProgressBar.tsx  RewardModal.tsx  ShortSurahs.tsx  SurahList.tsx  SurahViewer.tsx  ThemeSettings.tsx  UserAuthModal.tsx  UserLogin.tsx  UserRegister.tsx  icons.tsx
contexts/: ThemeContext.tsx
data/: tafsir-egyptian.ts
docs/: architecture.md
pages/: AdminPage.tsx
scripts/: generate-quran-data.js
services/: progressService.ts  quranService.ts
utils/: sounds.ts
