[tool.poetry]
name = "saghiri-backend"
version = "0.1.0"
description = "Backend for Sagheri Quran learning platform"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
djangorestframework = "^3.15"
django-filter = "^24.3"
psycopg[binary] = "^3.1"
django-cors-headers = "^4.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"
pytest-django = "^4.8"
model-bakery = "^1.19"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"